--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -26,7 +26,7 @@
         </svg>
         <div *ngIf="arr_boolNav[3]">CALORIE</div>
     </div>
-    <div id="nav4" class="nav-button" (click)="navClick(4)">
+    <div id="nav4" class="nav-button" (click)="navClick(4)" routerLink="/plan">
         <svg *ngIf="!arr_boolNav[4]" width="51" height="51" viewBox="0 0 51 51" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M5.23518 19.921H45.0226M5.23518 19.921V42.9875C5.23518 43.5436 5.45581 44.077 5.84852 44.4703C6.24124 44.8635 6.77387 45.0844 7.32926 45.0844H42.9285C43.4839 45.0844 44.0165 44.8635 44.4092 44.4703C44.8019 44.077 45.0226 43.5436 45.0226 42.9875V19.921M5.23518 19.921V10.4848C5.23518 9.92862 5.45581 9.39525 5.84852 9.002C6.24124 8.60875 6.77387 8.38782 7.32926 8.38782H42.9285C43.4839 8.38782 44.0165 8.60875 44.4092 9.002C44.8019 9.39525 45.0226 9.92862 45.0226 10.4848V19.921" stroke="black" stroke-width="4" stroke-linejoin="round"/>
             <path d="M16.7526 32.5028L23.0348 38.7936L35.5992 26.2119" stroke="black" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/>
