--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,4 +3,11 @@
     <div class="firstpage_person">
         <img id="img_person" src="../../assets/image/signup_login/firstpage_person.svg" alt="">
     </div>
+    <div class="firstpage_word">
+    <div class="firstpage_title">Lets Work For Being Slim</div>
+    <br>
+    <div class="firstpage_p">Getting tired of being a BIG GUY?</div>
+    <div class="firstpage_p">We Strive Together</div>
+    </div>
+    
 </div>
