refactor project structure

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -9,5 +9,8 @@
     <div class="firstpage_p">Getting tired of being a BIG GUY?</div>
     <div class="firstpage_p">We Strive Together</div>
     </div>
-    
+    <div class="firstpage_button">
+        <div class="firstpage_button1">LOGIN</div>
+        <div class="firstpage_button2">SIGNUP</div>
+    </div>
 </div>
