create login & set up bg

--- a/src/app/firstpage/firstpage.component.html
+++ b/src/app/firstpage/firstpage.component.html
@@ -1,2 +1,17 @@
-<app-login></app-login>
+<app-bg></app-bg>
+<div class="firstpage">
+    <div class="firstpage_person">
+        <img id="img_person" src="../../assets/image/signup_login/firstpage_person.svg" alt="">
+    </div>
+    <div class="firstpage_word">
+    <div class="firstpage_title">Lets Work For Being Slim</div>
+    <br>
+    <div class="firstpage_p">Getting tired of being a BIG GUY?</div>
+    <div class="firstpage_p">We Strive Together</div>
+    </div>
+    <div class="firstpage_button">
+        <div class="firstpage_button1" [routerLink]="['/login']" >LOGIN</div>
+        <div class="firstpage_button2">SIGNUP</div>
+    </div>
+</div>
 <app-navbar></app-navbar>
