--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,16 +1,39 @@
-<div class="firstpage">
-    <img id="img_circle"src="../../assets/image/signup_login/background.svg" alt="">
-    <div class="firstpage_person">
-        <img id="img_person" src="../../assets/image/signup_login/firstpage_person.svg" alt="">
+<app-bg></app-bg>
+<div class="login">
+    <div class="login_person">
+        <img id="login_img_person" src="../../assets/image/signup_login/login_person.svg" alt="">
     </div>
-    <div class="firstpage_word">
-    <div class="firstpage_title">Lets Work For Being Slim</div>
-    <br>
-    <div class="firstpage_p">Getting tired of being a BIG GUY?</div>
-    <div class="firstpage_p">We Strive Together</div>
+
+    <div class="login_title">Login</div>
+
+    <div class="login_input">
+        <div id="login_input_inside">
+            <img src="../../assets/image/signup_login/email_icon.svg">
+            <ion-item>
+            <ion-input placeholder="Email ID"></ion-input>
+            </ion-item>
+        </div>
+        <div id="login_input_inside">
+            <img src="../../assets/image/signup_login/password_icon.svg">
+            <ion-item>
+            <ion-input placeholder="Password"></ion-input>
+            </ion-item>
+        </div>
+    </div>
+    <div class="forgot_password_button">
+        <div class="forgot_password_button_inside" [routerLink]="['/']" >Forgot Password?</div>
     </div>
     <div class="firstpage_button">
-        <div class="firstpage_button1">LOGIN</div>
-        <div class="firstpage_button2">SIGNUP</div>
+        <div class="firstpage_button1" [routerLink]="['/login']" >LOGIN</div>
     </div>
+    <div class="or_word">
+        <hr width="25%">
+        OR
+        <hr width="25%">
+    </div>
+    <ion-button class="google_button" color="light">
+        <img style="position: absolute; left: 0%; right: 20%;" src="../../assets/image/signup_login/google_icon.svg">
+        <div id="google_button_word">Login with Google</div>
+    </ion-button>
+    <div class="bottom_word">Don't hava an account yet?&nbsp;<a routerLink="/signup">Register</a></div>
 </div>
