--- a/src/app/firstpage/firstpage.component.scss
+++ b/src/app/firstpage/firstpage.component.scss
@@ -1,4 +1,4 @@
-#container {
+/*#container {
     text-align: center;
   
     position: absolute;
@@ -25,3 +25,73 @@
   #container a {
     text-decoration: none;
   }
+*/
+
+.firstpage_person{
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+#img_person{
+  transform: translateY(-30px);
+  width: 85%;
+}
+
+
+.firstpage_word{
+  position: absolute;
+  bottom: 25%;
+  left: 0;
+  right: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.firstpage_title{
+  font-size: 25px;
+  font-weight: bold;
+}
+.firstpage_p{
+  margin: 5px;
+}
+.firstpage_button{
+  position: absolute;
+  bottom: 15%;
+  flex: 1;
+  left: 0;
+  right: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+.firstpage_button1{
+  border-left: 50px solid;
+  border-right: 50px solid;
+  border-top: 10px solid;
+  border-bottom: 10px solid;
+  border-radius: 18px;
+  font-size: large;
+  background: #F19D6E;
+  border-color: #F19D6E;
+  color: white;
+  font-weight: bold;
+}
+.firstpage_button2{
+  border-left: 50px solid;
+  border-right: 50px solid;
+  border-top: 10px solid;
+  border-bottom: 10px solid;
+  border-radius: 18px;
+  font-size: large;
+  background: #F19D6E;
+  border-color: #F19D6E;
+  color: white;
+  font-weight: bold;
+}
