--- a/src/app/my/my.component.html
+++ b/src/app/my/my.component.html
@@ -1,3 +1,5 @@
-<p>
-  my works!
-</p>
+<ion-content>
+  <div>My page</div>
+  <app-suggestions></app-suggestions>
+  <app-navbar></app-navbar>
+</ion-content>
