--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -1,17 +1,19 @@
-*{
+* {
     margin: none;
 }
-.nav-bar{
-    position: absolute;
+
+.nav-bar {
+    position: fixed;
     right: 0;
     left: 0;
     bottom: 0;
     height: 70px;
-    background-color:  rgba(244, 244, 244, 0.85);
+    background-color: rgba(244, 244, 244, 0.85);
     display: flex;
     flex-direction: row;
 }
-.nav-button{
+
+.nav-button {
     display: flex;
     flex: 1;
     justify-content: center;
@@ -20,6 +22,7 @@
     flex-direction: column;
     color: #0085FF;
 }
-#nav3{
+
+#nav3 {
     color: #F19D6E;
 }
