--- a/src/app/signup/signup.component.scss
+++ b/src/app/signup/signup.component.scss
@@ -1,4 +1,4 @@
-.login_person{
+.signup_person{
     position: absolute;
     top: 0;
     right: 0;
@@ -9,18 +9,12 @@
     align-items: flex-start;
   }
   
-  #login_img_person{
-    transform: translateY(50px);
+  #signup_img_person{
+    transform: translateY(90px);
     width: 85%;
   }
-
-  #login_img_back_arrow{
-    position: absolute;
-    top:6%;
-    left: 5%;
-  }
   
-  .login_title{
+  .signup_title{
     font-size: 40px;
     font-weight:800;
     position: absolute;
@@ -33,9 +27,9 @@
     justify-content: center;
   }
 
-  .login_input{
+  .signup_input{
     position: absolute;
-    bottom: 30%;
+    bottom: 22%;
     left: 0;
     right: 0;
     display: flex;
@@ -44,30 +38,15 @@
     justify-content: center;
   }
 
-  #login_input_inside{
+  #signup_input_inside{
     display: flex;
     flex-direction: row;
     margin-bottom: 5%;
   }
 
-  .forgot_password_button{
-    position: absolute;
-    bottom: 28%;
-    left: 50%;
-    right: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
-
-  .forgot_password_button_inside{
-    color: #0085FF;
-  }
-
   .firstpage_button{
     position: absolute;
-    bottom: 20%;
+    bottom: 8%;
     flex: 1;
     left: 0;
     right: 0;
@@ -75,6 +54,7 @@
     align-items: center;
     justify-content: space-around;
   }
+
   .firstpage_button1{
     border-left: 100px solid;
     border-right: 100px solid;
@@ -88,41 +68,18 @@
     font-weight: bold;
   }
 
-  hr{
-    background-color: gray;
-  }
-
-  .or_word{
-    position: absolute;
-    bottom: 15%;
-    left: 0;
-    right: 0;
-    display: flex;
-    color: gray;
-  }
-
-  .google_button{
-    position: absolute;
-    bottom: 6%;
-    left: 10%;
-    right: 10%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-
-  #google_button_word{
-    color: gray !important;
-  }
-
   .bottom_word{
     position: absolute;
-    bottom: 3%;
+    bottom: 18%;
     left: 10%;
     right: 10%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     color: gray;
     font-size: 12px;
+  }
+
+  .switch{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    
   }
