--- a/src/app/achievement/achievement.component.html
+++ b/src/app/achievement/achievement.component.html
@@ -1,3 +1,31 @@
-<p>
-  achievement works!
-</p>
+<div class="container">
+  <div class="achievement">
+    <img src="assets/image 2.svg" alt="achievement" class="achievement-img">
+    <div class="achievement-name">Achievement name</div>
+  </div>
+  <div class="achievement">
+    <img src="assets/image 2.svg" alt="achievement" class="achievement-img">
+    <div class="achievement-name">name</div>
+  </div>
+  <div class="achievement">
+    <img src="assets/image 2.svg" alt="achievement" class="achievement-img">
+    <div class="achievement-name">Achievement name</div>
+  </div>
+  <div class="achievement">
+    <img src="assets/image 2.svg" alt="achievement" class="achievement-img">
+    <div class="achievement-name">Achievement name</div>
+  </div>
+  <div class="achievement">
+    <img src="assets/image 2.svg" alt="achievement" class="achievement-img">
+    <div class="achievement-name">Achievement name</div>
+  </div>
+  <div class="achievement">
+    <img src="assets/image 2.svg" alt="achievement" class="achievement-img">
+    <div class="achievement-name">Achievement name</div>
+  </div>
+  <div class="achievement">
+    <img src="assets/image 2.svg" alt="achievement" class="achievement-img">
+    <div class="achievement-name">Achievement name</div>
+  </div>
+
+</div>
