--- a/src/app/firstpage/firstpage.component.html
+++ b/src/app/firstpage/firstpage.component.html
@@ -11,7 +11,7 @@
     </div>
     <div class="firstpage_button">
         <div class="firstpage_button1" [routerLink]="['/login']" >LOGIN</div>
-        <div class="firstpage_button2">SIGNUP</div>
+        <div class="firstpage_button2" [routerLink]="['/signup']">SIGNUP</div>
     </div>
 </div>
 <app-navbar></app-navbar>
