--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,9 +1,9 @@
 <app-bg></app-bg>
 <div class="signup">
     <div class="switch">
-        <img id="switch_on" src="../../assets/image/signup_login/page_switch_on.svg" alt="">
-        <img id="switch_on" src="../../assets/image/signup_login/page_switch_off.svg" alt="">
-        <img id="switch_on" src="../../assets/image/signup_login/page_switch_off.svg" alt="">
+        <img src="../../assets/image/signup_login/page_switch_on.svg" alt="">
+        <img src="../../assets/image/signup_login/page_switch_off.svg" alt="">
+        <img src="../../assets/image/signup_login/page_switch_off.svg" alt="">
     </div>
     <div class="signup_person">
         <img id="signup_img_person" src="../../assets/image/signup_login/signup_person.svg" alt="">
