--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -10,7 +10,7 @@
   }
   
   #login_img_person{
-    transform: translateY(50px);
+    transform: translateY(80px);
     width: 85%;
   }
 
@@ -18,6 +18,7 @@
     position: absolute;
     top:6%;
     left: 5%;
+    z-index: 1;
   }
   
   .login_title{
