--- a/src/app/signup/signup.component.scss
+++ b/src/app/signup/signup.component.scss
@@ -81,5 +81,9 @@
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    
+    position:absolute;
+    right:0;
+    left:0;
+    top:0;
+    bottom:85%;
   }
