--- a/src/app/achievement/achievement.component.scss
+++ b/src/app/achievement/achievement.component.scss
@@ -1,17 +1,21 @@
 .container {
     display: flex;
-    justify-content: center;
+
     flex-wrap: wrap;
-    height: 120px;
     overflow: hidden;
+    padding: 10px;
 }
 
 .achievement {
-    width: 80px;
+    width: 70px;
     display: flex;
     align-items: center;
     flex-direction: column;
-    background-color: aqua;
-    margin: 7px;
+    margin: 8px;
+    padding: 5px;
     text-align: center;
+}
+
+.achievement-name {
+    margin: 1px;
 }
