--- a/src/app/my/my.component.scss
+++ b/src/app/my/my.component.scss
@@ -1,7 +1,14 @@
+.body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
 .setting {
     position: relative;
     top: 20px;
-    left: 320px;
+    left: 330px;
     width: 30px;
     height: 30px;
 }
@@ -17,6 +24,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 0;
+
 }
 
 .total-hours,
@@ -27,4 +36,56 @@
     align-items: center;
     flex-direction: column;
     padding: 20px;
+}
+
+
+
+.achievements-container {
+    border-radius: 25px;
+    height: 150px;
+    background-color: white;
+
+}
+
+
+.achievements,
+.suggestions {
+    margin: 2.5%;
+    margin-top: 0;
+}
+
+.suggestions {
+    margin-bottom: 80px;
+}
+
+.title {
+    font-weight: bold;
+    font-size: 150%;
+    margin-bottom: 0px;
+}
+
+.info {
+    font-weight: 500;
+}
+
+.container {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    overflow: hidden;
+    padding: 10px;
+}
+
+.achievement {
+    width: 70px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin: 8px;
+    padding: 5px;
+    text-align: center;
+}
+
+.achievement-name {
+    margin: 1px;
 }
