--- a/src/app/suggestions/suggestions.component.html
+++ b/src/app/suggestions/suggestions.component.html
@@ -4,7 +4,7 @@
     <ion-card-title>Breakfast</ion-card-title>
   </ion-card-header>
   <ion-item>
-    <ion-button fill="outline" slot="end">See more</ion-button>
+    <ion-button fill="outline" slot="end" [routerLink]="['/meal']">See more</ion-button>
   </ion-item>
 </ion-card>
 
@@ -14,7 +14,7 @@
     <ion-card-title>Lunch</ion-card-title>
   </ion-card-header>
   <ion-item>
-    <ion-button fill="outline" slot="end">See more</ion-button>
+    <ion-button fill="outline" slot="end" [routerLink]="['/meal']">See more</ion-button>
   </ion-item>
 </ion-card>
 
@@ -24,7 +24,7 @@
     <ion-card-title>Dinner</ion-card-title>
   </ion-card-header>
   <ion-item>
-    <ion-button fill="outline" slot="end">See more</ion-button>
+    <ion-button fill="outline" slot="end" [routerLink]="['/meal']">See more</ion-button>
   </ion-item>
 </ion-card>
 
@@ -34,6 +34,6 @@
     <ion-card-title>Snack</ion-card-title>
   </ion-card-header>
   <ion-item>
-    <ion-button fill="outline" slot="end">See more</ion-button>
+    <ion-button fill="outline" slot="end" [routerLink]="['/meal']">See more</ion-button>
   </ion-item>
 </ion-card>
