--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -13,6 +13,7 @@
         </svg>
         <div *ngIf="arr_boolNav[1]">DASHBOARD</div>
     </div>
+    
     <div id="nav2" class="nav-button" (click)="navClick(2)">
         <svg *ngIf="!arr_boolNav[2]" width="44" height="45" viewBox="0 0 44 45" fill="none"
             xmlns="http://www.w3.org/2000/svg">
@@ -28,6 +29,7 @@
         </svg>
         <div *ngIf="arr_boolNav[2]">COMMUNITY</div>
     </div>
+
     <div id="nav3" class="nav-button" (click)="navClick(3)">
         <svg *ngIf="!arr_boolNav[3]" width="56" height="55" viewBox="0 0 56 55" fill="none"
             xmlns="http://www.w3.org/2000/svg">
@@ -43,6 +45,7 @@
         </svg>
         <div *ngIf="arr_boolNav[3]">CALORIE</div>
     </div>
+
     <div id="nav4" class="nav-button" (click)="navClick(4)" [routerLink]="['/plan']">
         <svg *ngIf="!arr_boolNav[4]" width="51" height="51" viewBox="0 0 51 51" fill="none"
             xmlns="http://www.w3.org/2000/svg">
@@ -66,7 +69,8 @@
         </svg>
         <div *ngIf="arr_boolNav[4]" [routerLink]="['/plan']">PLAN</div>
     </div>
-    <div id="nav5" class="nav-button" (click)="navClick(5)">
+
+    <div id="nav5" class="nav-button" (click)="navClick(5)" [routerLink]="['/my']">
         <svg *ngIf="!arr_boolNav[5]" width="49" height="49" viewBox="0 0 49 49" fill="none"
             xmlns="http://www.w3.org/2000/svg">
             <mask id="mask0_79_435" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="2" y="2" width="45"
