--- a/src/app/dashboard-live-workout/dashboard-live-workout.component.html
+++ b/src/app/dashboard-live-workout/dashboard-live-workout.component.html
@@ -1,3 +1,48 @@
-<p>
-  dashboard-live-workout works!
-</p>
+<ion-header>
+  <ion-toolbar>
+    <ion-title>dashboard-exercise</ion-title>
+  </ion-toolbar>
+</ion-header>
+
+<ion-content>
+  <div>
+    <div class="header">
+        <div class="ipt">
+            <input type="text" class="iipt">
+        </div>
+    </div>
+    <br>
+    <br>
+    <div class="body_h">
+       <div class="B_h1">
+        <h1 class="h1">ASDHJSABDJH</h1>
+       </div>
+       <br>
+       <br>
+       <div class="adio">
+        <!-- 视频 -->
+
+       </div>
+       <!-- <br> -->
+
+       <div class="text">
+        <br>
+            <ul>
+                <li>ADSADDA</li>
+                <li>ADSADDA</li>
+                <li>ADSADDA</li>
+            </ul>
+       </div>
+       <br>
+       <div class="text2">
+                <span>sfghjkldsadsadsadsadasd</span>
+                <span>sfghjkldsadsadsadsadasd</span>
+            <!-- 这块区域留着写字 -->
+       </div>
+       <div class="btn">
+            <button class="btnn">CLICK ME</button>
+       </div>
+    </div>
+</div>
+<app-navbar></app-navbar>
+</ion-content>
