dashboard_background_color

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,4 @@
+<ion-content>
 <app-bg-interfaces></app-bg-interfaces>
    <div class="body">
     <div class="header">
@@ -90,6 +91,8 @@
             </div>
     </div>
 </div>
+
 <app-navbar></app-navbar>
+</ion-content>
 
  
