--- a/src/app/achievement/achievement.component.html
+++ b/src/app/achievement/achievement.component.html
@@ -1,50 +1,50 @@
 <div class="container">
   <div class="achievement">
-    <img src="assets/image 2.svg" alt="achievement" class="achievement-img">
+    <img src="assets/image/element/image 2.svg" alt="achievement" class="achievement-img">
     <div class="achievement-name">Upload data once</div>
   </div>
   <div class="achievement">
-    <img src="assets/image 2.svg" alt="achievement" class="achievement-img">
+    <img src="assets/image/element/image 2.svg" alt="achievement" class="achievement-img">
     <div class="achievement-name">Do a workout</div>
   </div>
   <div class="achievement">
-    <img src="assets/image 2.svg" alt="achievement" class="achievement-img">
+    <img src="assets/image/element/image 2.svg" alt="achievement" class="achievement-img">
     <div class="achievement-name">Set a goal</div>
   </div>
   <div class="achievement">
-    <img src="assets/image 2.svg" alt="achievement" class="achievement-img">
+    <img src="assets/image/element/image 2.svg" alt="achievement" class="achievement-img">
     <div class="achievement-name">Enter the leaderboard</div>
   </div>
   <div class="achievement">
-    <img src="assets/image 2.svg" alt="achievement" class="achievement-img">
+    <img src="assets/image/element/image 2.svg" alt="achievement" class="achievement-img">
     <div class="achievement-name">A name</div>
   </div>
   <div class="achievement">
-    <img src="assets/image 2.svg" alt="achievement" class="achievement-img">
+    <img src="assets/image/element/image 2.svg" alt="achievement" class="achievement-img">
     <div class="achievement-name">A name</div>
   </div>
   <div class="achievement">
-    <img src="assets/image 2.svg" alt="achievement" class="achievement-img">
+    <img src="assets/image/element/image 2.svg" alt="achievement" class="achievement-img">
     <div class="achievement-name">A name</div>
   </div>
   <div class="achievement">
-    <img src="assets/image 2.svg" alt="achievement" class="achievement-img">
+    <img src="assets/image/element/image 2.svg" alt="achievement" class="achievement-img">
     <div class="achievement-name">A name</div>
   </div>
   <div class="achievement">
-    <img src="assets/image 2.svg" alt="achievement" class="achievement-img">
+    <img src="assets/image/element/image 2.svg" alt="achievement" class="achievement-img">
     <div class="achievement-name">A name</div>
   </div>
   <div class="achievement">
-    <img src="assets/image 2.svg" alt="achievement" class="achievement-img">
+    <img src="assets/image/element/image 2.svg" alt="achievement" class="achievement-img">
     <div class="achievement-name">A name</div>
   </div>
   <div class="achievement">
-    <img src="assets/image 2.svg" alt="achievement" class="achievement-img">
+    <img src="assets/image/element/image 2.svg" alt="achievement" class="achievement-img">
     <div class="achievement-name">A name</div>
   </div>
   <div class="achievement">
-    <img src="assets/image 2.svg" alt="achievement" class="achievement-img">
+    <img src="assets/image/element/image 2.svg" alt="achievement" class="achievement-img">
     <div class="achievement-name">A name</div>
   </div>
 
