--- a/src/app/my/my.component.html
+++ b/src/app/my/my.component.html
@@ -5,7 +5,7 @@
   </div>
 
   <div class="avatar-container">
-    <img src="assets/avatar.svg" alt="avatar" class="avatar">
+    <img src="assets/image/element/avatar.svg" alt="avatar" class="avatar">
     <div class="user-id">User id</div>
   </div>
 
@@ -31,19 +31,19 @@
     <div class="achievements-container" [routerLink]="['/achievement-page']">
       <div class="container">
         <div class="achievement">
-          <img src="assets/image 2.svg" alt="achievement" class="achievement-img">
+          <img src="assets/image/element/image 2.svg" alt="achievement" class="achievement-img">
           <div class="achievement-name">Upload data once</div>
         </div>
         <div class="achievement">
-          <img src="assets/image 2.svg" alt="achievement" class="achievement-img">
+          <img src="assets/image/element/image 2.svg" alt="achievement" class="achievement-img">
           <div class="achievement-name">Do a workout</div>
         </div>
         <div class="achievement">
-          <img src="assets/image 2.svg" alt="achievement" class="achievement-img">
+          <img src="assets/image/element/image 2.svg" alt="achievement" class="achievement-img">
           <div class="achievement-name">Set a goal</div>
         </div>
         <div class="achievement">
-          <img src="assets/image 2.svg" alt="achievement" class="achievement-img">
+          <img src="assets/image/element/image 2.svg" alt="achievement" class="achievement-img">
           <div class="achievement-name">Enter the leaderboard</div>
         </div>
       </div>
