--- a/src/app/signup3/signup3.component.html
+++ b/src/app/signup3/signup3.component.html
@@ -1,5 +1,5 @@
+<div class="body">
 <app-bg></app-bg>
-
 <div class="switch">
   <img [routerLink]="['/signup2']" src="../../assets/image/signup_login/page_switch_arrow.svg" alt="">
   <img src="../../assets/image/signup_login/page_switch_on.svg" alt="">
@@ -16,8 +16,16 @@
   </div>
 
   <div class="signup3_diet">DIETARY PREFERENCE?</div>
+
+  <div class="dietaryitem">
+    <div class="normal">NORMAL</div>
+    <div class="vagan">VAGAN</div>
+    <div class="halal">HALAL</div>
+  </div>
+
   <div class="signup3_allergy">ALLERGY INFO?</div>
 
 <div class="firstpage_button">
   <div class="firstpage_button1" [routerLink]="['/signup3']">FINISH</div>
+</div>
 </div>
