--- a/src/app/plan/plan.component.html
+++ b/src/app/plan/plan.component.html
@@ -19,5 +19,11 @@
       <div id="step-cal"> 2468</div>
     </div>
   </div>
+
+  <div class="suggestions">
+    <p class="title">Workout for today</p>
+
+  </div>
+
   <app-navbar></app-navbar>
 </ion-content>
