--- a/src/app/plan/plan.component.scss
+++ b/src/app/plan/plan.component.scss
@@ -19,7 +19,6 @@
     padding-bottom: 15px;
     background-color: white;
     border-radius: 25px;
-    margin-bottom: 80px;
 }
 
 p {
@@ -30,4 +29,15 @@ p {
 #caloris-cal,
 #step-cal {
     color: rgb(26, 138, 190);
+}
+
+.suggestions {
+    margin-bottom: 80px;
+}
+
+.title {
+    font-weight: bold;
+    font-size: 150%;
+    margin-bottom: 0px;
+    margin-left: 5%;
 }
