--- a/src/app/videos/videos.component.html
+++ b/src/app/videos/videos.component.html
@@ -1,3 +1,35 @@
-<p>
-  videos works!
-</p>
+<div class="foter">
+
+
+  <div class="Journalism">
+    <div class="left_p">
+      <!-- 这里面放图片 -->
+      <iframe width="170" height="100" src="https://www.youtube.com/embed/tgbNymZ7vqY" class="video">
+      </iframe>
+    </div>
+    <div class="right_p">
+      <div class="title">Excerise 1</div>
+      <br>
+      <img src="assets/image/element/face.svg" alt="face"><span> Beginner friendly</span>
+      <br>
+      <img src="assets/image/element/time.svg" alt=""><span> 12 min</span>
+    </div>
+  </div>
+  <br>
+  <div class="Journalism">
+    <div class="left_p">
+      <!-- 这里面放图片 -->
+      <iframe width="170" height="100" src="https://www.youtube.com/embed/tgbNymZ7vqY" class="video">
+      </iframe>
+    </div>
+    <div class="right_p">
+      <div class="title">Excerise 2</div>
+      <br>
+      <img src="assets/image/element/face.svg" alt="face"><span> Beginner friendly</span>
+      <br>
+      <img src="assets/image/element/time.svg" alt=""><span> 12 min</span>
+    </div>
+  </div>
+  <br>
+
+</div>
