updata singup3 & create privacy component

--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -31,7 +31,7 @@
         </div>
     </div>
     <div class="bottom_word">By signing up, you’re agree to our 
-        <a routerLink="/">Terms & Conditions</a> and <a routerLink="/">Privacy Policy</a>
+        <a [routerLink]="['/privacypolicy']" >Terms & Conditions</a> and <a [routerLink]="['/privacypolicy']">Privacy Policy</a>
     </div>
     <div class="firstpage_button">
         <div class="firstpage_button1" [routerLink]="['/signup2']" >NEXT</div>
